--- a/conf/application.conf
+++ b/conf/application.conf
@@ -81,12 +81,13 @@ db=mem
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql:user:pwd@database_name
+#db=mysql:kantban:kantban@kantban
 #
 # If you need a full JDBC configuration use the following :
-# db.url=jdbc:postgresql:database_name
-# db.driver=org.postgresql.Driver
-# db.user=root
-# db.pass=secret
+#db.url=jdbc:postgresql:database_name
+#db.driver=org.postgresql.Driver
+#db.user=kantban
+#db.pass=kantban
 #
 # Connections pool configuration :
 # db.pool.timeout=1000
@@ -199,7 +200,9 @@ mail.smtp=mock
 # ~~~~~
 #%test.module.cobertura=${play.path}/modules/cobertura
 %test.application.mode=dev
-%test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
+#%test.db.url=jdbc:h2:mem;MODE=MYSQL;LOCK_MODE=0
+%test.db.url=jdbc:h2:/tmp/kantban;AUTO_SERVER=TRUE;MODE=MYSQL;LOCK_MODE=0
+%test.db.driver=org.h2.Driver
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
