--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger = ERROR, Console
-log4j.logger.play = INFO
+log4j.logger.play = DEBUG
 log4j.logger.models = DEBUG
 log4j.logger.controllers = DEBUG
 
