--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -33,10 +33,12 @@ State(state2):
     project: project1
     name: "Backlog" 
     description: "Stories that have been prioritised and estimated."
+    limit: 4
 State(state3):
     project: project1
     name: "In Progress"
     description: "Stories that are actively being worked on."
+    limit: 3
 State(state4):
     project: project1
     name: "Completed"
