--- a/conf/application.conf
+++ b/conf/application.conf
@@ -206,3 +206,7 @@ mail.smtp=mock
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
+# Custom prefix (this is the default one)
+betterlogs.prefix=[%relativeFile:%line] %method() ::
+# Append 2 spaces at the end of the pattern
+betterlogs.prefix.trailingSpaces=2
