--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,7 +77,9 @@ date.format=yyyy-MM-dd
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-db=mem
+#db=mem
+db.url=jdbc:h2:/tmp/kantban;AUTO_SERVER=TRUE;MODE=MYSQL;LOCK_MODE=0
+db.driver=org.h2.Driver
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql:user:pwd@database_name
@@ -201,7 +203,7 @@ mail.smtp=mock
 #%test.module.cobertura=${play.path}/modules/cobertura
 %test.application.mode=dev
 #%test.db.url=jdbc:h2:mem;MODE=MYSQL;LOCK_MODE=0
-%test.db.url=jdbc:h2:/tmp/kantban;AUTO_SERVER=TRUE;MODE=MYSQL;LOCK_MODE=0
+%test.db.url=jdbc:h2:/tmp/kantban-test;AUTO_SERVER=TRUE;MODE=MYSQL;LOCK_MODE=0
 %test.db.driver=org.h2.Driver
 %test.jpa.ddl=create
 %test.mail.smtp=mock
