Remove maven dependency handling, and use play's builtin

--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -3,9 +3,10 @@
 require:
     - play
     - play -> gravatar 1.0
-    - play -> maven head
     - play -> secure
     - play -> crud
     - play -> jqvalidate 0.3
     - play -> html5validation 1.2
     - play -> betterlogs 1.0
+    - org.jsoup -> jsoup 1.5.2
+    - com.google.code.findbugs -> jsr305 1.3.9
