--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,8 +77,8 @@ date.format=yyyy-MM-dd
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-#db=mem
-db.url=jdbc:h2:/tmp/kantban;AUTO_SERVER=TRUE;MODE=MYSQL;LOCK_MODE=0
+db=mem
+#db.url=jdbc:h2:/tmp/kantban;AUTO_SERVER=TRUE;MODE=MYSQL;LOCK_MODE=0
 db.driver=org.h2.Driver
 #
 # To connect to a local MySQL5 database, use:
