--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -10,3 +10,4 @@ require:
     - play -> betterlogs 1.0
     - org.jsoup -> jsoup 1.5.2
     - com.google.code.findbugs -> jsr305 1.3.9
+    - org.hamcrest -> hamcrest-library 1.2.1
