--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -8,6 +8,11 @@ require:
     - play -> jqvalidate 0.3
     - play -> html5validation 1.2
     - play -> betterlogs 1.0
+    # HTML parser
     - org.jsoup -> jsoup 1.5.2
+    # Bug finder
     - com.google.code.findbugs -> jsr305 1.3.9
+    # better test assertions 
     - org.hamcrest -> hamcrest-library 1.2.1
+    # MarkDown parser
+    - org.pegdown -> pegdown 1.0.1
