state stats test

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,10 +1,12 @@
-log4j.rootLogger = ERROR, Console
-log4j.logger.play = DEBUG
-log4j.logger.models = DEBUG
-log4j.logger.controllers = DEBUG
+log4j.rootLogger = error, Console
+log4j.logger.play = info
+log4j.logger.models = info
+log4j.logger.controllers = info
+
+log4j.logger.models.State = debug
 
 # Control most of this with application.conf:jpa.debugSql
-log4j.logger.org.hibernate = WARN
+# log4j.logger.org.hibernate = WARN
 ### log HQL query parser activity
 #log4j.logger.org.hibernate.hql.ast.AST=debug
 ### log just the SQL
@@ -27,5 +29,5 @@ log4j.logger.org.hibernate = WARN
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 #log4j.appender.Console.layout.ConversionPattern=%d{ABSOLUTE} %-5p %C{1} ~ %m%n
-log4j.appender.Console.layout.ConversionPattern=%d{ABSOLUTE} %-5p %C ~ %m%n
+log4j.appender.Console.layout.ConversionPattern=%d{ABSOLUTE} %-5p %C: %m%n
 
